src/mobius.esc/escjava/tags/escjava-2-0b0/ESCTools/Javafe/test/javafe/test/fe/test17/Public3.java
import p.Private;	// error: Private not accessible here
// javac gets this one wrong too.

class Public3 {}
